network-policy-smregister-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    team: teamsykmelding
  name: smregister-instance
  namespace: teamsykmelding
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 35.228.57.214/32
  podSelector:
    matchLabels:
      app: macgyver
  policyTypes:
    - Egress
