network-policy-smregistering-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: smregistrering-instance
  namespace: teamsykmelding
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 34.88.120.172/32
  podSelector:
    matchLabels:
      app: macgyver
  policyTypes:
    - Egress
