network-policy-smregistering-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: smregistrering-instance
  namespace: teamsykmelding
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 35.228.10.214/32
  podSelector:
    matchLabels:
      app: macgyver
  policyTypes:
    - Egress
